syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

enum TaskExecutionStage {
  TYPE_UNSPECIFIED = 0;
  QUEUEING = 1;
  VALIDATING = 2;
  EXECUTING = 3;
  FINISHED = 4;
  FAILED = 5;
  ABORTED = 6;
  PARKED = 7;
}
